[tool.poetry]
name = "Все еще абоба"
version = "0.0.1"
description = "что-то"
authors = [
    "Абоба 1",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
mypy = "^1.16.1"
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"


[tool.mypy]
python_version = "3.12"

enable_error_code = ["truthy-bool", "ignore-without-code"]
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = true

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"